# checkmk

./: .bazelignore  .gitattributes  BUILD  Cargo.toml  MODULE.bazel  bazel_downloader.cfg  community-requirements.txt  go.mod  go.sum  host.Cargo.lock.bazel  module_layers.toml  paseo.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  requirements_all_lock.txt  requirements_runtime_lock.txt  runtime-requirements.txt  site.Cargo.lock.bazel
.paseo/: reclaim-bazel-output-base.sh
.werks/: 16920.md  16923.md  16928.md  18753.md  18757.md  18758.md  19216.md  19217.md  19218.md  19221.md  19250.md  19253.md  19327.md  19328.md  19479.md  19577.md  19589.md  19590.md  19712.md  19914.md  19930.md  19931.md  19932.md  20036.md  20038.md  20057.md  20058.md  20061.md  20065.md  20071.md  20072.md  20074.md  20078.md  20089.md  20103.md  20105.md  20108.md  20119.md  20127.md  20134.md  (+8 more)
agents/: check_mk_agent.linux
agents/plugins/: mk_docker.py  mk_inotify.py  mk_oracle
agents/wnx/: redeploy_local.cmd
bazel/module/: js.MODULE.bazel  xwin.MODULE.bazel
bazel/module/gazelle/: go.MODULE.bazel
bazel/module/rust/: host.MODULE.bazel
bazel/patches/: rules_lint-clang_tidy_builtin_include_dir.patch
bazel/rules/: deploy.bzl  doctest.bzl  vue_package.bzl
bazel/toolchains/cc/xwin/: BUILD.xwin_sysroot.bazel  xwin_sysroot.bzl
bazel/tools/: BUILD  aspects.bzl  license_header_checker.py  multitool.lock.json  python_extension_checker.py
buildscripts/docker_image_aliases/: register.py
buildscripts/scripts/: BUILD  assert-release-build-artifacts.groovy  assert_build_artifacts.py  bazel_test_ci.sh  build-build-images.groovy  build-cloud-images.groovy  build-cmk-container.py  build-cmk-deliverables.groovy  build-cmk-distro-package.groovy  build-cmk-image.groovy  build-cmk-relay-image.groovy  build-linux-agent-updater.groovy  build-mk-oracle-on-aix-and-solaris.groovy  build-wine-from-source.groovy  build_wine.sh  create-coverage.groovy  create-dependency-update-changeset.groovy  deploy-to-website.groovy  extract_llvm.sh  frontend-ui-component-library.groovy  generic-package-job.groovy  lint-repository.groovy  publish_cloud_images.py  relay-msi.groovy  send-werks-to-mailing-lists.groovy  sign-cmk-distro-package.groovy  stages.yml  test-agent-plugin-unit.groovy  test-bazel-lint.groovy  test-component-mk-oracle.groovy  test-composition-single.groovy  test-composition.groovy  test-gerrit-single.groovy  test-gerrit.groovy  test-github-actions.groovy  test-gui-crawl.groovy  test-gui-e2e-single-node.groovy  test-gui-e2e-single.groovy  test-gui-e2e.groovy  test-integration-agent-plugin.groovy  (+32 more)
cmk/: BUILD  message_broker_certs.py  requirements.in  requirements.txt  validate_plugins.py
cmk/automations/: logging.py
cmk/base/: BUILD  base_app.py  check_cmk_inv.py  checkers.py  community_app.py  config.py  diagnostics.py  dump_host.py  events.py  localize.py  notify.py  parent_scan.py
cmk/bi/: aggregation.py  compiler.py  computer.py  lib.py  searcher.py  storage.py  trees.py
cmk/config_anonymizer/: default_rule_values.mk  main.py
cmk/diagnostics/: _unsorted.py
cmk/editions/: BUILD
cmk/fields/: primitives.py
cmk/gui/: BUILD  color.py  common_registration.py  community_registration.py  crash_handler.py  deprecations.py  general_config.py  header.py  http.py  i18n.py  icon_helpers.py  logged_in.py  login.py  main_menu_match_items.py  main_modules.py  message.py  page_menu.py  page_menu_utils.py  pages.py  painter_options.py  pdf.py  permissions.py  prediction.py  pseudo_users.py  query_filters.py  table.py  type_defs.py  view.py  view_renderer.py  view_utils.py  visual_link.py  werks.py
cmk/inventory/: structured_data.py
cmk/legacy_checks/: OWNERS  aws_cloudwatch_alarms_limits.py  aws_elb.py  aws_elb_summary.py  aws_elbv2_application.py  aws_elbv2_application_target_groups_http.py  aws_elbv2_application_target_groups_lambda.py  aws_elbv2_summary.py  aws_glacier.py  azure_ad.py  azure_agent_info.py  barracuda_mail_latency.py  cisco_prime_wifi_access_points.py  f5_bigip_fans.py  f5_bigip_interfaces.py  f5_bigip_mem.py  netapp_cpu.py  netgear_fans.py  perle_chassis.py  perle_chassis_slots.py  perle_modules_mgt.py  perle_psmu.py  qnap_fans.py  raritan_pdu_outletcount.py  ucs_c_rack_server_power.py
cmk/legacy_includes/: aws.py  elphase.py
cmk/plugins/: BUILD
cmk/post_rename_site/: BUILD  main.py
cmk/product_usage/: BUILD  cli.py  schedule.py
cmk/update_config/: BUILD  main.py
cmk/utils/: BUILD  certs.py  host_storage.py  http_proxy_config.py  keypair_store.py  labels.py  man_pages.py  misc.py  notify.py  notify_types.py  paths.py  render.py  tags.py
component_owners/mcp/: OWNERS_DEFINITION
component_owners/network_flow_monitoring/: OWNERS_DEFINITION
doc/documentation/: BUILD  arch-migrations.rst
doc/treasures/: peak_detection.py
omd/: BUILD  strip_binaries.py
omd/dependency_management/: automatically_researched_licenses.json  pnpm_parser.py
scripts/gerrit_api/: scrape_werks.py
tests/: BUILD  run_tests.sh
tests/agent_plugin_integration/: comparison.py  conftest.py  test_docker_oracle.py  test_plugin_comparison.py
tests/code_quality/: test_no_nargs_in_agents.py  test_package_json.py
tests/composition/: conftest.py
tests/docker/: test_docker.py
tests/gui_crawl/: crawler.py
tests/gui_e2e/: test_email_notifications.py  test_hosts.py  test_menu_help.py  test_mobile.py  test_piggyback_hub_conf.py  test_services.py  test_totp.py
tests/integration/: test_outgoing_tls.py
tests/integration_redfish/: conftest.py
tests/openapi/: test_notification_rules.py  test_openapi_bi.py  test_openapi_downtime.py  test_openapi_graph.py  test_openapi_graph_pin.py  test_openapi_host_config.py  test_openapi_monitor_all_hosts.py  test_openapi_rules.py
tests/unit/: BUILD
(+759 files in other folders)
